name:                auth-token-persistent
version:             0.0
synopsis:            using token to authenticate
description:         Please see README.md
homepage:            https://github.com/lethom/token
license:             MIT
license-file:        LICENSE
author:              Thomas Letan
maintainer:          contact@thomasletan.fr
copyright:           2016 Thomas Letan
category:            Security
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Auth.Token.Persistent
  other-modules:       Auth.Token.Persistent.Backend
  build-depends:       base >= 4.7 && < 5
                     , token
                     , token-persistent
                     , token-random
                     , auth-token
                     , persistent
                     , persistent-template
                     , monad-control
                     , time
  default-language:    Haskell2010

test-suite auth-token-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , auth-token
                     , token
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lethom/token
