name:                servant-auth-token-server
version:             0.0
synopsis:            using token to authenticate
description:         Please see README.md
homepage:            https://github.com/lethom/token
license:             MIT
license-file:        LICENSE
author:              Thomas Letan
maintainer:          contact@thomasletan.fr
copyright:           2016 Thomas Letan
category:            Security
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Auth.Token.Server
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , auth-token
                     , servant-auth-token-api
                     , mtl
                     , token
                     , token-aeson
                     , time
                     , servant
                     , servant-server
  default-language:    Haskell2010

executable authd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , auth-token
                     , auth-token-persistent
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , servant-auth-token-api
                     , servant-auth-token-server
                     , servant-server
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

test-suite servant-auth-token-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-auth-token-server
                     , token
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lethom/token
