name:                token-random
version:             0.0
synopsis:            token implementation of random typeclass
description:         Please see README.md
homepage:            https://github.com/lethom/token
license:             MIT
license-file:        LICENSE
author:              Thomas Letan
maintainer:          contact@thomasletan.fr
copyright:           2016 Thomas Letan
category:            Security
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Token.Random
  build-depends:       base >= 4.7 && < 5
                     , token
                     , base64-bytestring
                     , crypto-api
  default-language:    Haskell2010

test-suite token-random-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , token-random
                     , token
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lethom/token
